fable/test/syntax_error/bad_after_dot.f
      program prog
      logical a
      a = 1 .2et. 2
      end
